--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,3 +21,16 @@ pipeline {
         }
     }
 }
+
+    post {
+        always {
+            echo 'Cleaning up...'
+        }
+        success {
+            echo 'Pipeline completed successfully!'
+        }
+        failure {
+            echo 'Pipeline failed!'
+        }
+    }
+}
